app/assets/stylesheets/header.sass
//%placeholder
//  color: $h-tannish
//  opacity: 0.82

header
  background-color: $h-brownish
  color: $h-tannish
  padding: 7px 15px
  margin-bottom: 30px
  overflow: auto

  #logo-container
    width: 200px
  #logo
    transition: all 200ms ease-in-out
    &:hover
      transform: scale(1.3)
    path
      fill: $tannish

  #user
    text-align: right

  a
    color: $h-tannish

  li
    margin-left: 10px

  .usernav
    font-size: $fs-smaller
    //.class:before
    //  content: '('
    //  padding: 0 2.5px
    //.class:after
    //  content: ')'
    //  padding: 0 2.5px
    //  margin-right: 2.5px
    ul
      display: inline-flex
    li
      margin: 0
    li:not(:first-child):before
      content: '\002022'
      margin: 0 5px

  nav
    margin-top: 5px
    font-size: $fs-big
    form
      display: inline-block
    .group
      border-bottom: 1px solid $h-tannish
    .rsfsubmit
      vertical-align: text-bottom
      height: 80%
      border: transparent
      background: transparent image_url('ic_search_24px.svg') no-repeat center/133%
    //input[type=image]
    //  vertical-align: text-bottom
    //  height: 80%
    input[type=text]
      border-color: transparent
      background-color: transparent
      color: $tannish
      &:focus
        outline: none
      &::-webkit-input-placeholder
        //@extend %placeholder
        color: $h-tannish
        opacity: 0.82
      &::-moz-placeholder
        //@extend %placeholder
        color: $h-tannish
        opacity: 0.82
      &:-ms-input-placeholder
        //@extend %placeholder
        color: $h-tannish
        opacity: 0.82

